css/main.css
/* Main
*
*/
body {
    width: 100%;
    min-width: 200px;

    display: flex;
    flex-flow: column wrap;


    font-size: 16px;  /*Default size*/
}


/*
 Centers all blocks inside page
 */
body > * {
    width: 85%;
    margin: 0 auto;
    padding: 10px 5px;
}

li {

    list-style: none;

}

ul {

    padding-left: 0;
}


.row-flex-default {
    display: flex;

}

figure > img {
    text-align: center;

}

/*
   Header


 */

#top-navbar-list {
    padding-left: 15px;
}


#top-navbar-list > li {
    display: inline-block;
    width: 70px;


}


#top-navbar-list > li a {
    text-decoration: none;
}

#top-navbar-list > li a:visited {
    text-decoration: none;
}

#header-box {
    padding: 15px;
    padding-left: 5px;

}

#intro {
    padding: 30px 0;
    line-height: 1.5em;
}

#occup {
    font-size: 1.1em;
}

/*
Resume main parts
*/

#resume {

    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    flex: 1 1 200px;

    height: 800px;
}

.left-side {
    width: 40%;
}


.right-side {
    width: 50%;
}


#resume li {
    padding: 7px 0;
}


/*
  Personal section
 */
#personal-options, #software-list {
    float: left;
    width: 35%;
}

#personal-values, #skill-bar-list {
    float: right;
    width: 65%;
}

#personal li{
    padding: 7px 0;
}

hr {
    margin: 0;
}

/*Software skills*/

.skill-bar {
    height: 12px;
    padding: 3px;
    position: relative;
    background: #555;
    width: 100%;
}

.skill-bar > span {
    display: block;
    background: #386ec4;
    height: 100%;
}




/*
footer
 */


#social-media-contacts > figure {
    width: 32%;

}

#footer-address {
    height: 40px;
    padding: 10px 10px;
}




#address {
    width: 70%;
    float: left;
    padding: 5px;
}

#website {
    width: 20%;
    float: right;
    padding: 5px;
}

